# This is only here to support the metadata in pip show
[metadata]
author = Carlo Gatti
url = https://github.com/64rl0/my_utils_library.git

[flake8]
# E203: Not PEP8, Black adds whitespace before ':'.
# W503: Not PEP8, Black adds line break before binary operator.
ignore = E203,W503
# Set the maximum length that any line (with some exceptions) may be.
max-line-length = 100
# Set the maximum length that a comment or docstring line may be.
max-doc-length = 72

[options]
packages = find:
python_requires = >=3.9
install_requires =
    cryptography
    selenium
    boto3
    boto3-stubs
    mypy_boto3_dynamodb
    mypy-boto3-secretsmanager
    mypy-boto3-s3
    requests
    types-requests
    mysql-connector-python
